# ode_solver

./: .gitignore  CMakeLists.txt  README.md  compile_and_run_ode_solver.sh  ode_solver.cfg  params.nc  set_params.py  vis_results.py
cmake/: FindNetCDF.cmake
docs/: ode_solver.puml
f90/: equations.f90  observer.f90
f90/mains/: lorenz.f90  main.f90  ode_solver.f90
f90/src/: command_line_setters.f90  equations.f90  euler.f90  euler_integrator.f90  integrator.f90  lorenz.f90  lorenz_system.f90  netcdf_utils.f90  observer.f90  ode_interface.f90  ode_system.f90  parameters.f90  rk.f90  shallow_water_system.f90  solver.f90  system.f90
f90/utils/: graph.py
python/: euler.py  main.py  parameters.py  setup.py
python/mains/: main.py
python/src/euler/: __init__.py  euler.py  parameters.py
python/tests/: test_euler.py
src/: equations.f90  integrator.f90  netcdf_utils.f90  observer.f90  rk_integrator.f90  settings.f90  shallow_water_system.f90
src/mains/: ode_solver.f90
